--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <h1 class="display-3 text-center">Work Day Scheduler</h1>
+      <p class="lead text-center">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead text-center"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
