initial slot setup and spacing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
       <p id="currentDay" class="lead text-center"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row hour">
+        <div class="col">
+          9am
+        </div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
