--- a/index.html
+++ b/index.html
@@ -30,9 +30,87 @@
     </header>
     <div class="container">
       <div class="row hour">
-        <div class="col">
-          9am
+        <div class="col time-block">09:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
         </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">10:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">11:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">12:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">13:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">14:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">15:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">16:00</div>
+        <div class="description col-8">
+          <!-- editable field for tasks -->
+          test
+        </div>
+        <div class="col save-btn saveBtn">
+          save button
+        </div>
+      </div>
+      <div class="row hour">
+        <div class="col time-block">17:00</div>
         <div class="description col-8">
           <!-- editable field for tasks -->
           test
